infra/k8s/client-depl.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: client-depl 
spec: 
  replicas: 1 
  selector: 
    matchLabels: 
      app: client 
  template: 
    metadata:
      labels: 
        app: client 
    spec: 
      containers: 
        - name: client 
          image: fadhilaf/client-ticketing-test
