infra/k8s/ticket-depl.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: ticket-depl 
spec: 
  replicas: 1 
  selector: 
    matchLabels: 
      app: ticket 
  template: 
    metadata:
      labels: 
        app: ticket 
    spec: 
      containers: 
        - name: ticket 
          image: fadhilaf/ticket-ticketing-test
