infra/k8s/ticket-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: ticket-mongo-depl 
spec: 
  replicas: 1 
  selector: 
    matchLabels: 
      app: ticket-mongo
  template: 
    metadata:
      labels: 
        app: ticket-mongo
    spec: 
      containers: 
        - name: ticket-mongo
          image: mongo #pake image mongodb
